# telegram-notifications

./: LICENSE  README.md  prek.toml  pyproject.toml
src/telegram_notifications/: __init__.py  async_telegram_client.py  cli.py  logger.py
tests/: integration_test.py
